--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <input type="radio" name="read-book" id="not-read" />
             </label>
           </div>
-          <input type="submit" value="Submit" />
+          <input type="submit" value="Submit" id="submit" />
         </form>
       </div>
     </div>
